# discorddb

./: LICENSE  README.md  pyproject.toml
examples/: basic_read.py  basic_write.py
src/: __init__.py  client.py  database.py  pool.py  types.py  utils.py
tests/: test_database.py  test_formatter.py  test_table.py
